Add repositories, actions, commands

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.3.1",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6",
-    "telegraf": "^4.13.1"
+    "telegraf": "^4.13.1",
+    "telegraf-inline-menu": "^6.3.0"
   }
 }
